tests/fail/registering/term typed with a pure sort.mmu
(sort s pure)
(term a () (s ()))
